shopsn/templates/shopsn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopsn-front-svc
spec:
  selector:
    app: shopsn-front-deploy
  ports:
    - protocol: TCP
      port: 4210
      targetPort: 4210
  type: NodePort
