shopsn/templates/shopsn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopsn-front-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://shopsn.127.0.0.1.nip.io, https://*.shopsn.127.0.0.1.nip.io"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, X-Tenant-ID, Accept"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shopsn.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopsn-front-svc
                port:
                  number: 4210
    - host: "*.shopsn.127.0.0.1.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopsn-front-svc
                port:
                  number: 4210
    - host: api-shopsn.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopsn-svc
                port:
                  number: 8099
    - host: minio.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-minio-service
                port:
                  number: 9000
  tls:
    - hosts:
        - api-shopsn.127.0.0.1.nip.io
        - shopsn.127.0.0.1.nip.io
        - "*.shopsn.127.0.0.1.nip.io"
        - minio.127.0.0.1.nip.io
      secretName: app-tls
